--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "@web3auth/modal-react-hooks": "^8.12.3",
     "@web3auth/openlogin-adapter": "^8.12.2",
     "@web3auth/wallet-services-plugin-react-hooks": "^8.12.3",
+    "@web3auth/web3auth": "^2.1.3",
     "ethers": "^6.9.0",
     "hamburger-react": "^2.5.0",
     "jose": "^5.2.4",
-    "@web3auth/web3auth": "^2.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-js-pagination": "^3.0.3",
@@ -58,6 +58,7 @@
     "prettier": "3.2.5",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5",
+    "vite-plugin-node-polyfills": "^0.22.0",
     "web-vitals": "^3.5.2"
   }
 }
