--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@web3auth/base": "^8.12.2",
     "@web3auth/default-evm-adapter": "^8.12.4",
     "@web3auth/ethereum-provider": "^8.12.3",
+    "@web3auth/metamask-adapter": "^8.12.4",
     "@web3auth/modal": "^8.12.3",
     "@web3auth/modal-react-hooks": "^8.12.3",
     "@web3auth/openlogin-adapter": "^8.12.2",
     "@web3auth/wallet-services-plugin-react-hooks": "^8.12.3",
     "@web3auth/web3auth": "^2.1.3",
+    "@xmtp/react-sdk": "^8.0.1",
     "ethers": "^6.9.0",
     "hamburger-react": "^2.5.0",
     "jose": "^5.2.4",
