--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@safe-global/api-kit": "^2.4.5",
+    "@safe-global/auth-kit": "^2.0.8",
     "@safe-global/protocol-kit": "^4.1.0",
     "@safe-global/safe-core-sdk-types": "^5.1.0",
     "@tailwindcss/forms": "^0.5.7",
