--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@metamask/detect-provider": "^2.0.0",
     "@safe-global/api-kit": "^2.4.5",
     "@safe-global/auth-kit": "^2.0.8",
     "@safe-global/protocol-kit": "^4.1.0",
@@ -29,7 +30,7 @@
     "@web3auth/wallet-services-plugin-react-hooks": "^8.12.3",
     "@web3auth/web3auth": "^2.1.3",
     "@xmtp/react-sdk": "^8.0.1",
-    "ethers": "^6.9.0",
+    "ethers": "^6.13.1",
     "hamburger-react": "^2.5.0",
     "jose": "^5.2.4",
     "react": "^18.3.1",
@@ -37,11 +38,11 @@
     "react-js-pagination": "^3.0.3",
     "react-json-formatter": "^0.4.0",
     "react-router-dom": "^6.23.1",
-    "vite": "^5.3.5",
-    "web3": "^4.9.0"
+    "vite": "^5.3.5"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@nomiclabs/hardhat-web3": "^2.0.0",
     "@toruslabs/eslint-config-typescript": "^3.2.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.12.12",
@@ -51,6 +52,7 @@
     "@typescript-eslint/parser": "^6.13.2",
     "autoprefixer": "^10.4.19",
     "buffer": "^6.0.3",
+    "dotenv": "^16.4.5",
     "empty-module": "^0.0.2",
     "eslint": "^8.55.0",
     "eslint-plugin-import": "^2.29.1",
@@ -59,6 +61,8 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.2",
+    "ethers": "^6.9.0",
+    "hardhat": "^2.22.10",
     "path-browserify": "^1.0.1",
     "postcss": "^8.4.38",
     "prettier": "3.2.5",
